Revise personal webpage content and structure
Updated the structure and content of the personal webpage, including sections for skills, projects, and contact information.

--- a/index.html
+++ b/index.html
@@ -6,18 +6,93 @@
 </head>
 <body>
 
-  <h1>Hola, soy Enrique Alonso👋</h1>
+  <!-- Header -->
+  <h1>Hola, soy Enrique Alonso 👋</h1>
   <p>Ingeniero Industrial en transición a Data / BI.</p>
 
-  <h2>📊 Proyectos</h2>
+  <!-- Acerca de mí -->
+  <h2>Acerca de mí</h2>
+  <p>
+    Data Analyst junior con formación en Ingeniería Industrial y experiencia en operaciones de logística y e-commerce. 
+    Trabajo con Python (Pandas, NumPy, Matplotlib), SQL y procesos de ETL para analizar procesos de negocio, construir métricas accionables y apoyar la mejora continua. 
+    Mi enfoque combina conocimiento operativo de última milla con análisis de datos aplicado a casos reales.
+  </p>
+
+  <!-- Habilidades -->
+  <h2>Habilidades</h2>
+
+  <h3>Habilidades tecnológicas</h3>
   <ul>
-    <li>Instacart Data Analysis (Python, SQL)</li>
-    <li>Análisis de KPIs Logísticos</li>
+    <li>Análisis y gestión de datos: Python / SQL / Excel</li>
+    <li>Visualización de datos: Tableau / Looker studio / Power BI</li>
   </ul>
 
+  <h3>Habilidades blandas</h3>
+  <ul>
+    <li>Análisis de datos</li>
+    <li>Resolución de problemas</li>
+    <li>Comunicación efectiva</li>
+    <li>Trabajo en equipo</li>
+    <li>Orientación a resultados</li>
+    <li>Organización y proactividad</li>
+    <li>Atención al detalle</li>
+    <li>Optimización de procesos</li>
+  </ul>
+
+  <!-- Proyectos -->
+  <h2>📊 Proyectos seleccionados</h2>
+
+  <!-- Proyecto 1 -->
+  <h3>Título del proyecto</h3>
+
+  <p>
+    Escribe aquí el contexto del problema: por qué es importante,
+    qué industria o situación se analiza y qué objetivo tiene el proyecto.
+  </p>
+
+  <h4>Herramientas y tipo de proyecto</h4>
+  <p>
+    Escribe aquí: Python · Pandas · SQL · Limpieza de datos ·
+    Análisis exploratorio · Modelado · Visualización, etc.
+  </p>
+
+  <h4>Preguntas clave</h4>
+  <ul>
+    <li>Escribe aquí una pregunta clave</li>
+    <li>Escribe aquí otra pregunta clave</li>
+    <li>Escribe aquí otra pregunta clave</li>
+  </ul>
+
+  <h4>Metodología</h4>
+  <ul>
+    <li>Preprocesamiento de datos: escribe aquí</li>
+    <li>Análisis exploratorio (EDA): escribe aquí</li>
+    <li>Modelado o análisis: escribe aquí</li>
+    <li>Segmentación / predicción / métricas: escribe aquí</li>
+  </ul>
+
+  <h4>Conclusiones y recomendaciones</h4>
+  <ul>
+    <li>Insight principal o hallazgo clave</li>
+    <li>Recomendación basada en datos</li>
+    <li>Impacto potencial o real</li>
+  </ul>
+
+  <h4>Visualizaciones destacadas</h4>
+  <p>
+    Escribe aquí qué gráficos o dashboards destacan
+    (o agrega imágenes más adelante).
+  </p>
+
+  <!-- Contacto -->
   <h2>📫 Contacto</h2>
-  <p> 464-100-09-70 </p>
-  <p>www.linkedin.com/in/alonso-rico  </p>
+  <p>📞 464-100-09-70</p>
+  <p>
+    <a href="https://www.linkedin.com/in/alonso-rico" target="_blank">
+      LinkedIn
+    </a>
+  </p>
 
 </body>
 </html>
+
