Revise project details and findings in index.html
Updated project descriptions, tools, key findings, and recommendations for two projects in the analysis section.

--- a/index.html
+++ b/index.html
@@ -43,39 +43,40 @@
   <h2>📊 Proyectos seleccionados</h2>
 
   <!-- Proyecto 1 -->
-  <h3>Título del proyecto</h3>
+  <h3>Análisis de embudo y experimento A/A/B en app de e-commerce</h3>
 
   <p>
-    Escribe aquí el contexto del problema: por qué es importante,
-    qué industria o situación se analiza y qué objetivo tiene el proyecto.
+  Análisis del comportamiento de usuarios en una aplicación de venta de productos
+  alimenticios, con el objetivo de identificar puntos de fricción en el embudo de
+  conversión y evaluar el impacto de un cambio de diseño mediante un experimento A/A/B.
   </p>
 
-  <h4>Herramientas y tipo de proyecto</h4>
+  <h4>Herramientas</h4>
   <p>
-    Escribe aquí: Python · Pandas · SQL · Limpieza de datos ·
-    Análisis exploratorio · Modelado · Visualización, etc.
+  Python (Pandas, NumPy, Matplotlib, SciPy) · SQL · Análisis de embudos ·
+  Experimentación A/A/B · Pruebas estadísticas
   </p>
 
-  <h4>Preguntas clave</h4>
+  <h4>Hallazgos clave</h4>
   <ul>
-    <li>Escribe aquí una pregunta clave</li>
-    <li>Escribe aquí otra pregunta clave</li>
-    <li>Escribe aquí otra pregunta clave</li>
+    <li>El embudo sigue la secuencia: Pantalla principal → Ofertas → Carrito → Pago.</li>
+    <li>La menor conversión ocurre de Carrito a Pago (26.87%), con una pérdida del 73.13% de usuarios.</li>
+    <li>La conversión total del embudo es de 5.93%, evidenciando oportunidades de mejora.</li>
+    <li>Los usuarios que completan el tutorial muestran mejores tasas de conversión en todas las etapas.</li>
   </ul>
 
-  <h4>Metodología</h4>
+  <h4>Resultados del experimento</h4>
   <ul>
-    <li>Preprocesamiento de datos: escribe aquí</li>
-    <li>Análisis exploratorio (EDA): escribe aquí</li>
-    <li>Modelado o análisis: escribe aquí</li>
-    <li>Segmentación / predicción / métricas: escribe aquí</li>
+    <li>Los grupos de control (A/A) son estadísticamente equivalentes, validando el experimento.</li>
+    <li>No se encontraron diferencias significativas entre el grupo experimental y los controles.</li>
+    <li>El cambio de tipografía no generó mejoras medibles en la conversión.</li>
   </ul>
 
-  <h4>Conclusiones y recomendaciones</h4>
+  <h4>Recomendaciones</h4>
   <ul>
-    <li>Insight principal o hallazgo clave</li>
-    <li>Recomendación basada en datos</li>
-    <li>Impacto potencial o real</li>
+    <li>Optimizar la etapa Carrito → Pago para reducir el abandono.</li>
+    <li>Incrementar la visibilidad y uso del tutorial, dado su impacto positivo en la conversión.</li>
+    <li>Detener el experimento de tipografías al no mostrar beneficios.</li>
   </ul>
 
   <h4>Visualizaciones destacadas</h4>
@@ -83,6 +84,46 @@
     Escribe aquí qué gráficos o dashboards destacan
     (o agrega imágenes más adelante).
   </p>
+
+  <!-- Proyecto 2 -->
+  <h3>Análisis de rentabilidad de marketing y LTV en plataforma de venta de entradas</h3>
+
+  <p>
+  Análisis del comportamiento de usuarios y la eficiencia del gasto en marketing
+  para una plataforma de venta de entradas a eventos, con el objetivo de optimizar
+  la inversión publicitaria y maximizar el valor del cliente a lo largo del tiempo (LTV).
+  </p>
+
+  <h4>Herramientas</h4>
+  <p>
+  Python (Pandas, NumPy, Matplotlib, Seaborn) · SQL · Análisis de cohortes ·
+  LTV(Lifetime Value) · CAC (Customer Acquisition Cost) · ROMI (Return on Marketing Investment) · Visualización de datos
+  </p>
+
+  <h4>Hallazgos clave</h4>
+  <ul>
+    <li>La mayoría de los usuarios no son recurrentes y realizan una sola visita al sitio.</li>
+    <li>El 69% de las compras se realizan el mismo día de la primera visita.</li>
+    <li>El uso del servicio es predominantemente desde desktop, siendo el dispositivo más efectivo.</li>
+    <li>El LTV muestra una tendencia descendente a lo largo del tiempo, indicando baja retención.</li>
+    <li>Las cohortes de junio y septiembre de 2017 presentaron mayor valor acumulado.</li>
+  </ul>
+
+  <h4>Análisis de marketing</h4>
+  <ul>
+    <li>Las fuentes 3, 4 y 5 concentran el mayor gasto publicitario, siendo la fuente 3 la más costosa.</li>
+    <li>La fuente 9 presenta el menor CAC y una mejor eficiencia en adquisición.</li>
+    <li>Las fuentes 1 y 2 resultan rentables en el corto plazo (ROMI positivo).</li>
+    <li>El análisis LTV/CAC muestra mejor desempeño a largo plazo en las fuentes 9, 10 y 4.</li>
+  </ul>
+
+  <h4>Recomendaciones</h4>
+  <ul>
+    <li>Reducir o replantear la inversión en la fuente 3 por su bajo desempeño.</li>
+    <li>Priorizar las fuentes 9, 10 y 4 para estrategias de retención y crecimiento sostenido.</li>
+    <li>Utilizar las fuentes 1 y 2 para campañas de impacto a corto plazo.</li>
+    <li>Alinear la estrategia de marketing con los objetivos del negocio (corto vs largo plazo).</li>
+  </ul>
 
   <!-- Contacto -->
   <h2>📫 Contacto</h2>
