Refactor skills section layout in index.html

--- a/index.html
+++ b/index.html
@@ -30,23 +30,34 @@
     <section class="section">
       <h2>🧠 Habilidades</h2>
 
-      <h3>🛠️ Tecnológicas</h3>
-      <ul class="skills">
-        <li>Python (Pandas, NumPy, Matplotlib)</li>
-        <li>SQL</li>
-        <li>Excel</li>
-        <li>Tableau · Looker Studio · Power BI</li>
-      </ul>
+      <div class="skills-grid">
 
-      <h3>🤝 Blandas</h3>
-      <ul class="skills">
-        <li>Análisis de datos</li>
-        <li>Resolución de problemas</li>
-        <li>Comunicación efectiva</li>
-        <li>Trabajo en equipo</li>
-        <li>Orientación a resultados</li>
-        <li>Optimización de procesos</li>
-      </ul>
+        <div class="skills-column">
+          <h3>🛠️ Tecnológicas</h3>
+          <ul class="skills">
+            <li>Lenguajes de programación y librerías: Python (Pandas, NumPy, Dash)</li>
+            <li>Bases de datos: SQL</li>
+            <li>Visualización de datos: Tableau | Looker Studio | Power BI | Matplotlib | Seaborn</li>
+            <li>ETL (Extract, transform, load): Data Wrangling | Cleaning | Normalización | Excel</li>
+          </ul>
+        </div>
+
+        <div class="skills-column">
+          <h3>🤝 Blandas</h3>
+          <ul class="skills">
+            <li>Análisis de datos</li>
+            <li>Resolución de problemas</li>
+            <li>Comunicación efectiva</li>
+            <li>Trabajo en equipo</li>
+            <li>Orientación a resultados</li>
+            <li>Optimización de procesos</li>
+          </ul>
+        </div>
+
+      </div>
+
+
+      
     </section>
 
     <!-- PROYECTOS -->
