Add contact header section to index.html
Added a contact header section with profile picture and contact information.

--- a/index.html
+++ b/index.html
@@ -15,6 +15,22 @@
       <p class="subtitle">Ingeniero Industrial en transición a Data / BI</p>
     </section>
 
+<!-- CONTACTO HEADER -->
+<section class="contact-header">
+
+  <img src="img/profile.jpg" alt="Foto de Enrique Alonso" class="profile-pic">
+
+  <div class="contact-info">
+    <p>📞 464-100-09-70</p>
+    <p>
+      🔗 <a href="https://www.linkedin.com/in/alonso-rico" target="_blank">
+        linkedin.com/in/alonso-rico
+      </a>
+    </p>
+  </div>
+
+</section>
+    
     <!-- ACERCA DE MI -->
     <section class="section">
       <h2>👤 Acerca de mí</h2>
@@ -55,8 +71,6 @@
         </div>
 
       </div>
-
-
       
     </section>
 
@@ -109,15 +123,6 @@
         </p>
       </div>
 
-    </section>
-
-    <!-- CONTACTO -->
-    <section class="section">
-      <h2>📫 Contacto</h2>
-      <p>📞 464-100-09-70</p>
-      <p>
-        🔗 <a href="https://www.linkedin.com/in/alonso-rico" target="_blank">LinkedIn</a>
-      </p>
     </section>
 
   </main>
