Change profile image to JPEG and add project images
Updated profile image format and added project images section.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <!-- CONTACTO HEADER -->
 <section class="contact-header">
 
-  <img src="img/profile.jpg" alt="Foto de Enrique Alonso" class="profile-pic">
+  <img src="img/profile.jpeg" alt="Foto de Enrique Alonso" class="profile-pic">
 
   <div class="contact-info">
     <p>📞 464-100-09-70</p>
@@ -89,6 +89,12 @@
 
         <p><strong>🔧 Herramientas:</strong> Python, SQL, análisis de embudos, pruebas estadísticas</p>
 
+<!-- Imágenes del proyecto -->
+  <div class="project-images">
+    <img src="img/funnel-overview.png" alt="Vista general del embudo de conversión">
+    <img src="img/funnel-conversion.png" alt="Conversión por etapa del embudo">
+  </div>
+        
         <ul>
           <li>Conversión total del embudo: <strong>5.93%</strong></li>
           <li>Mayor abandono: Carrito → Pago (<strong>-73%</strong>)</li>
