Change project title and enhance findings description
Updated project section to highlight key findings and recommendations.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-- PROYECTOS -->
     <section class="section">
-      <h2>📊 Proyectos seleccionados</h2>
+      <h2>📊 Proyectos destacados</h2>
 
       <!-- Proyecto 1 -->
       <div class="project-card">
@@ -87,23 +87,32 @@
           cambios de diseño mediante un experimento A/A/B.
         </p>
 
-        <p><strong>🔧 Herramientas:</strong> Python, SQL, análisis de embudos, pruebas estadísticas</p>
+        <p><strong>🔧 Herramientas:</strong> Python, SQL, análisis de embudos, pruebas de estadísticas de hipótesis</p>
+
+        <p><strong>Hallazgos:</strong></p>
+
+        <ul>
+          <li>Conversión total del embudo: <strong>5.93%</strong></li>
+          <li>Mayor abandono: Carrito → Pago (<strong>-73%</strong>)</li>
+          <li>Se identificó que los usuarios que completan el tutorial convierten mejor en cada paso del embudo, con una conversión total del <strong>26.4%</strong></li></li>
+          <li>Los grupos de control A / A no presentaron diferencias significativas, por lo que se implementaron correctamente</li>
+          <li>Los grupos de control A / A vs el grupo experimental B (cambio funcional) no presentaron diferencias significativas, es decir, se comportaron igual</li>
+        </ul>
 
 <!-- Imágenes del proyecto -->
+         <p><strong>Visualizaciones destacadas:</strong></p>
   <div class="project-images">
     <img src="img/funnel-overview.png" alt="Vista general del embudo de conversión">
     <img src="img/funnel-conversion.png" alt="Conversión por etapa del embudo">
   </div>
         
-        <ul>
-          <li>Conversión total del embudo: <strong>5.93%</strong></li>
-          <li>Mayor abandono: Carrito → Pago (<strong>-73%</strong>)</li>
-          <li>Usuarios que completan el tutorial convierten mejor</li>
-          <li>El cambio de tipografía no mostró impacto significativo</li>
-        </ul>
-
         <p class="impact">
-          📌 <strong>Impacto:</strong> Se recomienda optimizar la etapa de pago y fomentar el uso del tutorial.
+          📌 <strong>Recomendaciones:</strong> El experimento validó la estabilidad del sistema mediante un A/A sin diferencias significativas y
+  evidenció que el cambio funcional del grupo B no generó mejoras en la conversión. No obstante, se
+  detectó un hallazgo clave: los usuarios que completan el tutorial alcanzan una conversión total del
+  26.4%, significativamente superior al promedio del embudo, lo que posiciona al tutorial como un
+  punto de alto impacto para incrementar la conversión, particularmente en la transición de carrito
+  a pago.
         </p>
       </div>
 
