--- a/index.html
+++ b/index.html
@@ -120,21 +120,36 @@
       <div class="project-card">
         <h3>Análisis de rentabilidad de marketing y LTV en plataforma de eventos</h3>
         <p class="project-desc">
-          Evaluación del comportamiento de clientes y eficiencia del gasto en marketing para
-          optimizar la inversión publicitaria y maximizar el valor del cliente (LTV).
+          Evaluación del comportamiento de usuarios y la eficiencia del gasto en marketing para
+          optimizar la inversión publicitaria y maximizar el valor del cliente a lo largo del tiempo(LTV), combinando 
+          análisis de cohortes, adquisición y rentabilidad
         </p>
 
-        <p><strong>🔧 Herramientas:</strong> Python, SQL, análisis de cohortes, LTV, CAC, ROMI</p>
+        <p><strong>🔧 Herramientas:</strong> Python, SQL, análisis de cohortes, LTV, CAC, ROMI, Visualización de datos</p>
 
+        <p><strong>Hallazgos:</strong></p>
+        
         <ul>
-          <li>69% de las compras ocurren el primer día</li>
-          <li>Baja recurrencia de usuarios</li>
-          <li>Mejor desempeño LTV/CAC: fuentes 9, 10 y 4</li>
+          <li>69% de las compras ocurren el primer día, lo que limita la lealtad de los usuarios</li>
+          <li>Baja recurrencia de usuarios, la mayoria de usuarios son de una sola vez</li>
+          <li>LTV decreciente en el tiempo</li>
+          <li>Cohortes de junio y septiembre 2017, mostraron mayor valor acumulado, indicando oportunidades de replicar estrategias exitosas</li>
+          <li>Mejor desempeño LTV/CAC: fuentes de marketing 9, 10 y 4, siendo las más rentables a largo plazo</li>
           <li>Fuente 3: mayor costo y menor eficiencia</li>
+          <li>Las fuentes 1 y 2 son eficientes para resultados a corto plazo (ROMI positivo)</li>
         </ul>
 
+<!-- Imágenes del proyecto -->
+         <p><strong>Visualizaciones destacadas:</strong></p>
+  <div class="project-images">
+    <img src="img/ltv.png" alt="Matriz del lifetime value">
+    <img src="img/ltv-acumulado.png" alt="Matriz ltv acumulado">
+  </div>
+        
         <p class="impact">
-          📌 <strong>Impacto:</strong> Priorizar fuentes rentables a largo plazo y ajustar campañas por objetivo.
+          📌 <strong>Recomendaciones:</strong> El análisis evidenció una baja retención de usuarios, con el 69% de las compras realizadas el primer día, lo que explica la caída progresiva del LTV.
+El estudio de CAC, ROMI y LTV/CAC mostró que algunas fuentes rentables a corto plazo (1 y 2) no generan valor sostenible, mientras que las fuentes 9, 10 y 4 maximizan el retorno a largo plazo.
+Se recomienda reorientar la inversión según el objetivo del negocio (impacto inmediato vs. crecimiento sostenible) y reducir la dependencia de la fuente 3 por su alto costo y bajo desempeño.
         </p>
       </div>
 
