Revise findings and recommendations in index.html

--- a/index.html
+++ b/index.html
@@ -130,13 +130,13 @@
         <p><strong>Hallazgos:</strong></p>
         
         <ul>
-          <li>69% de las compras ocurren el primer día, lo que limita la lealtad de los usuarios</li>
-          <li>Baja recurrencia de usuarios, la mayoria de usuarios son de una sola vez</li>
-          <li>LTV decreciente en el tiempo</li>
-          <li>Cohortes de junio y septiembre 2017, mostraron mayor valor acumulado, indicando oportunidades de replicar estrategias exitosas</li>
-          <li>Mejor desempeño LTV/CAC: fuentes de marketing 9, 10 y 4, siendo las más rentables a largo plazo</li>
-          <li>Fuente 3: mayor costo y menor eficiencia</li>
-          <li>Las fuentes 1 y 2 son eficientes para resultados a corto plazo (ROMI positivo)</li>
+          <li>Compra concentrada en el día 1 (69%), evidenciando baja lealtad y retención</li>
+          <li>Alta proporción de usuarios de una sola compra, lo que limita el crecimiento del LTV</li>
+          <li>LTV decreciente en el tiempo, asociado a la baja recurrencia</li>
+          <li>Cohortes de junio y septiembre 2017 destacan por mayor valor acumulado → patrones replicables</li>
+          <li>Mejor LTV/CAC: fuentes 9, 10 y 4, las más rentables a largo plazo</li>
+          <li>Fuente 3: alto costo y bajo rendimiento</li>
+          <li>Fuentes 1 y 2: efectivas solo para impacto inmediato (ROMI positivo, bajo LTV)</li>
         </ul>
 
 <!-- Imágenes del proyecto -->
@@ -147,9 +147,9 @@
   </div>
         
         <p class="impact">
-          📌 <strong>Recomendaciones:</strong> El análisis evidenció una baja retención de usuarios, con el 69% de las compras realizadas el primer día, lo que explica la caída progresiva del LTV.
-El estudio de CAC, ROMI y LTV/CAC mostró que algunas fuentes rentables a corto plazo (1 y 2) no generan valor sostenible, mientras que las fuentes 9, 10 y 4 maximizan el retorno a largo plazo.
-Se recomienda reorientar la inversión según el objetivo del negocio (impacto inmediato vs. crecimiento sostenible) y reducir la dependencia de la fuente 3 por su alto costo y bajo desempeño.
+          📌 <strong>Recomendaciones:</strong> El negocio depende de compras tempranas y carece de una estrategia sólida de retención, lo que explica la caída sostenida del LTV.
+          Se recomienda: Priorizar inversión en fuentes 9, 10 y 4 para crecimiento sostenible, usar 1 y 2 solo para objetivos tácticos de corto plazo y reducir o replantear la fuente 3.
+El enfoque debe migrar de adquisición inmediata a maximización de valor por usuario.
         </p>
       </div>
 
